--- a/Layman/Layman.html
+++ b/Layman/Layman.html
@@ -1,74 +1,70 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Stock Market Prediction by Crowd Sourcing Analysis</title>
-</head>
-<body>
+
 <h2>Stock Market Prediction by Crowd Sourcing Analysis</h2>
+<p>Student(s): William Lopez Jaramillo, Coen Hacking, Emre Devrim, Matthew Mitchell;
+<br/>Supervisor(s): Evgueni Smirnov;
+<br/>Semester: 2018-2019;</p>
 
-Student(s): William Lopez Jaramillo, Coen Hacking, Emre Devrim, Matthew Mitchell;
-Supervisor(s): Evgueni Smirnov;
-Semester: 2018-2019;
+<figure><img src="figure_1.png" alt="" width="360" height="300" /></figure>
 
-<figure><img style="float: left; padding-right: 20px;"
-src="http://<url to image>" alt="" width="458" height="300" />
-<figcaption>Fig 1. - General image that illustrates overall project
-</figcaption>
-</figure>
-
-<h4>Problem statement and motivation:</h4>
-<p align=”justify”>
-Last year one of the research projects foccussed on predicting weather information based on what other experts (websites) predicted.
-This year we try do something similar on economic data. In the US there is a survay of professional forcasters (SPF),
-which has been arround for 50 years now and consists of 16 economic variables that are estimated every quarter over 5 different time horizons.
-The predictions that do on this data (e.g. GDP) largely involve taking the mean or the medium, however we think that we can improve upon this using data science techniques.
+<h4>Problem Statement and Motivation</h4>
+<p>Last year, one of the research projects used a mutiple predictors from different weather websites to provide a more accurate predictions of weather variables than any individual website.
+They employed a technique that measured how well new observations would <em>conform&nbsp;</em>to previous data to select a best estimate of new values. They also used <em>conformal</em> regions to give estimates of the accuracy of their predictions.
+We are employing similiar techniques to get better accuracy from a quarterly survey run by the Federal Reserve called the Survey of Professional Forecasters (SPF). A group of organisations participate in the survey and this group changes every quarter;
+this provides an oppurtunity to use statistical techniques focused on boosting the accuracy of grouped experts. The predictions in the SPF are used by many businesses for their own forecasts and therefore providing statistically significant improvements would be useful.
 </p>
 
-<figure><img style="text-align: center;" src="http://<url to image>" alt="" />
-<figcaption>Fig 2. - ???.
-</figcaption>
-</figure>
-
-<figure><img style="text-align: center;" src="http://<url to image>" alt="" />
-<figcaption>Fig 3. - ???.
-</figcaption>
-</figure>
-
-<h4>Research questions/hypotheses:</h4>
+<h4>Research Questions/hHypotheses</h4>
 <ol>
-<li>What is an effective way to aggregate the predictions on SPF website?</li>
+  <li>What is an effective way to aggregate the predictions on SPF website?</li>
   <ol type="a">
-    <li>Can a model be implemented that performs well and does not reply on an overly complex model?</li>
+    <li>Can an approach be implemented that performs well and does not reply on an overly complex model?</li>
     <li>How does our model compare to what has been implemented on so far?</li>
-    <li>Is it more appropriate to treat the SPF data as a time series?</li>
   </ol>
-<li>Can the conformal predictive regions be computed that reflect the theory of conformal prediction?</li>
+  <li>Can the conformal predictive regions be computed that reflect the theory of conformal prediction?</li>
   <ol type="a">
-    <li>Can conformal prediction identify ‘black swan’ events where a previously unforeseen phenomenon has a significant impact on the economy?</li>
-    <li>Is there any way to predict the likelihood that the range of predictions that experts make is completely wrong?</li>
+    <li>Can conformal prediction identify &lsquo;black swan&rsquo; events where a previously unforeseen phenomenon has a significant impact on the economy?</li>
   </ol>
-<li>Can individual experts be evaluated to improve the prediction?</li>
+  <li>Can individual experts be evaluated to improve the prediction?</li>
   <ol type="a">
     <li>Can the individual bias of experts be evaluated and be adjusted for?</li>
-    <li>Is there benefit to removing experts that don’t contribute to the prediction accuracy?</li>
+    <li>Is there benefit to removing experts that don&rsquo;t contribute to the prediction accuracy?</li>
   </ol>
-<li>Can the predictions be enhanced through transfer learning where the prediction tasks of the experts are similar?</li>
+  <li>Can the predictions be enhanced through deep learning where the prediction tasks of the experts are similar?</li>
   <ol type="a">
     <li>Are there common domaine features for the predictions that experts or ensembles of experts make?</li>
     <li>Do instances in one time series serve as useful examples for training in another time series?</li>
-    <li>Can different models over different time series be stacked to output a better prediction?</li>
   </ol>
 </ol>
 
-<h4>Approaches:</h4>
+<h4>Approaches</h4>
+<h5>Auto Regressive Model</h5>
+This model does not use the predictions made by the SPF. It offers controllability. We found that by far the most significant way to use this model on the given dataset is to make future predictions economic variables from the previous time period.
+Many of the time series appear to be log linear, others express some irregular seasonality.
 
+<h5>Crowd Sourced Regression</h5>
+Weighting experts by variance works well when past performance is a good indicator of future performance.
+In general, experts are very similar when making predictions over lower time horizons. This model provides value over longer time horizons when making good predictions is harder.
+Adjusting experts for bias and variance only increases performance when certain criteria is met.
+If all the errors are already independent and identically distributed then there is no benefit from adjusting the experts.
 
-<h4>Main outcomes:</h4>
+<h5>Traditional Machine Learning Models</h5>
+The models used required that we transform the data into fixed length input.
+For our initial experiments we have included a broad range of features from the experts.
+Features assessed experts as a group instead of individually.
+In next period we will reduce the number of features to a subset that generalises well across all time series.
+
+<h4>Future Approaches</h4>
 <ol>
-<li>We're able to significantly decrease the error, compared to traditional approaches</li>
-<li>Many algorithms can deal with the major sparsity that the SPF dataset has</li>
-<li>Emre is a beast!</li>
-<li>Other points??????</li>
+<li>The “Crowd Layer” Neural Network approach will be implemented. There is not sufficient data to train this model on a single time series. For this stage we will need features that generalise across all time series. </li>
+<li>Transfer learning can also be applied in this stage to extract lower level features across all time series.</li>
+<li>A suitable measure of conformity on the data will be found.</li>
+<li>Our models will shift to multi-output regression.</li>
+</ol>
+
+<h4>Main Outcomes</h4>
+<ol>
+<li>Accurate predictions for the macro-economic variables in the SPF dataset and estimations of accuracy that align with conformal prediction regions.</li>
+<li>Compare State of the Art deep learning techniques on large generalised datasets to a classifier that specialises on a single time series.</li>
 </ol>
 
 <h4>References:</h4>
@@ -77,21 +73,12 @@ The predictions that do on this data (e.g. GDP) largely involve taking the mean 
 <li>Thomas R. Cook and Aaron Smalter Hall, Macroeconomic Indicator Forecasting with Deep Neural Networks in Federal Reserve Bank of Kansas City Research Working Papers ISSN 1936-5330 (2017)</li>
 <li>Wei Bao, Jun Yue and Yulei Rao, A deep learning framework for financial time series using stacked autoencoders and longshort term memory in PLoS ONE 12(7): e0180944. https://doi.org/10.1371/journal.pone.0180944 (2017)</li>
 <li>Vikas C. Raykar, Shipeng Yu, Linda H. Zhao, Gerardo Hermosillo Valadez, Charles Florin, Charles Florin and Linda Moy, Learning From Crowds in Journal of Machine Learning Research 11 1297-1322 (2010)</li>
-<li>Hui Zou and Trevor Hastie, Regularization and variable selection via the elastic net in Journal of the Royal Statistical Society: Series B (Statistical Methodology), 67(2):301{320, (2005)</li>
 <li>Glenn Shafer and Vladimir Vovk, A Tutorial on Conformal Prediction in Journal of Machine Learning Research 9 371-421 (2008)</li>
-<li>David Pardoe and Peter Stone, Boosting for Regression Transfer in Proceedings of the Twenty-Seventh International Conference on Machine Learning (ICML 10) (2010)</li>
-<li>Sepp Hochreiter and Jurgen Schmidhuber, Long Short-Term Memory in Neural Computation 9(8):1735-1780 (1997)</li>
-<li>Lisa Torrey and Jude Shavlik, Transfer Learning in Handbook of Research on Machine Learning Applications (2009)</li>
-<li>Nikolay Laptev, Jiafan Yu and Ram Rajagopal, Applied time series and transfer learning, Workshop track - ICLR (2018)</li>
-<li>Priyanka Gupta, Pankaj Malhotra, Lovekesh Vig, Gautam Shroff, Transfer Learning for Clinical Time Series Analysis using Recurrent Neural Networks, TCS Research (2018)</li>
-<li>Sima Siami Namin, Akbar Siami Namin, Forecasting Economic and Financial Time Series: ARIMA vs. LSTM, Texas Tech University</li>
-<li>Riyaz Sikora and O’la Hmoud Al-laymoun, A Modified Stacking Ensemble Machine Learning Algorithm using Genetic Algorithms in Journal of International Technology and Information Management: Vol. 23: Iss. 1, Article 1. (2014)</li>
+<li>Filipe Rodrigues and Francisco Pereira, Deep Learning from Crowds in&nbsp;Conference on Artificial Intelligence (2018)</li>
 </ol>
-
 <h4>Downloads:</h4>
-<a href=”???” target=”_blank”>Final report</a>
-<a href=”???” target=”_blank”>Final presentation</a>
-<a href=”???” target=”_blank”>Code Github</a>
-
-</body>
-</html>
+<p>
+  <a href="&rdquo;???&rdquo;" target="&rdquo;_blank&rdquo;">Final report</a>
+  <a href="&rdquo;???&rdquo;" target="&rdquo;_blank&rdquo;">Final presentation</a>
+  <a href="&rdquo;???&rdquo;" target="&rdquo;_blank&rdquo;">Code Github</a>
+</p>
